Seperate play card. Reset game

--- a/src/app.css
+++ b/src/app.css
@@ -12,3 +12,19 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.card {
+  height: 9cm;
+  width: 6cm;
+  border-radius: 12px;
+  border: 2px solid white;
+}
+
+.pattern {
+  width: 100%;
+  height: 100%;
+  background-color: #575957;
+  opacity: 1;
+  background: radial-gradient(circle, transparent 20%, #575957 20%, #575957 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, #575957 20%, #575957 80%, transparent 80%, transparent) 37.5px 37.5px, linear-gradient(#015100 3px, transparent 3px) 0 -1.5px, linear-gradient(90deg, #015100 3px, #575957 3px) -1.5px 0;
+  background-size: 75px 75px, 75px 75px, 37.5px 37.5px, 37.5px 37.5px;
+}
